Fri Oct 12 09:52:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: If allow, deny, default_deny or
	  default_allow are passed as empty lists, behave as if they were
	  passed as None.

Wed Oct 10 22:56:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Update some documentation comments.

Wed Oct 10 18:21:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add the default_op, default_allow, and
	  default_deny optional parameters to spell_correct(), so that it
	  takes the same arguments as query_parse().

Wed Oct 10 01:25:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: Remove facet and tags test runs - we don't
	  have the data needed to make them run, anyway.

Wed Oct 10 01:22:20 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py,perftest/searcher.py: Add use_or option to
	  search runs, and do an "OR" run by default.

Tue Oct 09 16:03:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Expand documentation comment to
	  explain the distinction between default_{allow,deny} and
	  {allow,deny}.

Tue Oct 09 15:36:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: Add "--usedb" parameter - if supplied, a
	  ready made DB is assumed to be at that path, and no index run
	  will be done.

Tue Oct 09 15:10:00 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: If pylab isn't available, don't call the
	  analyse_* functions (and don't produce pretty graphs, as a
	  result).

Tue Oct 09 14:55:53 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* README,docs/introduction.rst: Update comments about the version
	  of Xapian which is required.

Tue Oct 09 02:14:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/running_perftest.txt: More instructions.
