@@ -1,3 +1,9 @@
+Mon Oct 29 09:30:21 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Retry parse_query() attempt without
+	  support for boolean operators if it fails in spell correct
+	  routine, to match behaviour of query_parse() routine.
+
 Fri Oct 12 09:52:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: If allow, deny, default_deny or
